<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.felipedantas.gerenciador.UserInterface.UI.activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/nm_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nm_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:text="Olá Felipe!"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkRemember"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:text="@string/lembrar_senha" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_weight="5"
            android:background="@drawable/main_buttons"
            android:padding="8dp"
            android:text="@string/entrar"
            android:textColor="@color/colorTextWhite" />
    </LinearLayout>

</RelativeLayout>
