<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.felipedantas.gerenciador.UserInterface.UI.activity.MainActivity">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_logo"/>

    <TextView
        android:id="@+id/txtSaldacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/saudacoes" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSaldacoes"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginRight="10dp"
            android:layout_weight="5"
            android:background="@drawable/main_buttons"
            android:padding="8dp"
            android:text="@string/entrar"
            android:textColor="@color/colorTextWhite" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_weight="5"
            android:background="@drawable/main_buttons"
            android:padding="8dp"
            android:text="@string/registrar"
            android:textColor="@color/colorTextWhite" />
    </LinearLayout>

</RelativeLayout>
