<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.felipedantas.gerenciador.MenuActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_menu" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_menu_add"
        app:fabSize="normal" />

    <LinearLayout
        android:id="@+id/layoutAddCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="95dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="7dp"
            android:text="@string/categoria" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatAddCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_menu_categoria"
            app:fabSize="mini" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddDespesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="7dp"
            android:text="@string/despesa" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatAddDespesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_menu_despesas"
            app:fabSize="mini" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="205dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="7dp"
            android:text="@string/receita" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatAddReceita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_menu_receitas"
            app:fabSize="mini" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
